// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render columns-top、columns-bottom slots correctly 1`] = `
<div class="r-picker">
  <div class="r-picker__toolbar">
    <button type="button"
            class="r-picker__cancel r-haptics-feedback"
    >
      Cancel
    </button>
    <button type="button"
            class="r-picker__confirm r-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  Custom Columns Top
  <div class="r-picker__columns"
       style="height: 264px;"
  >
    <div class="r-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="r-picker-column__wrapper"
      >
      </ul>
    </div>
  </div>
  Custom Columns Bottom
</div>
`;

exports[`should render confirm/cancel slot correctly 1`] = `
<div class="r-picker">
  <div class="r-picker__toolbar">
    <button type="button"
            class="r-picker__cancel r-haptics-feedback"
    >
      Custom Cancel
    </button>
    <button type="button"
            class="r-picker__confirm r-haptics-feedback"
    >
      Custom Confirm
    </button>
  </div>
  <div class="r-picker__columns"
       style="height: 264px;"
  >
    <div class="r-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="r-picker-column__wrapper"
      >
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render option slot correctly 1`] = `
<div class="r-picker">
  <div class="r-picker__toolbar">
    <button type="button"
            class="r-picker__cancel r-haptics-feedback"
    >
      Cancel
    </button>
    <button type="button"
            class="r-picker__confirm r-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  <div class="r-picker__columns"
       style="height: 264px;"
  >
    <div class="r-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="r-picker-column__wrapper"
      >
        <li role="button"
            style="height: 44px;"
            tabindex="0"
            class="r-picker-column__item r-picker-column__item--selected"
        >
          Custom 1990
        </li>
        <li role="button"
            style="height: 44px;"
            tabindex="0"
            class="r-picker-column__item"
        >
          Custom 1991
        </li>
      </ul>
    </div>
    <div class="r-picker__mask"
         style="background-size: 100% 110px;"
    >
    </div>
    <div class="r-hairline-unset--top-bottom r-picker__frame"
         style="height: 44px;"
    >
    </div>
  </div>
</div>
`;

exports[`should render title slot correctly 1`] = `
<div class="r-picker">
  <div class="r-picker__toolbar">
    <button type="button"
            class="r-picker__cancel r-haptics-feedback"
    >
      Cancel
    </button>
    Custom title
    <button type="button"
            class="r-picker__confirm r-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  <div class="r-picker__columns"
       style="height: 264px;"
  >
    <div class="r-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="r-picker-column__wrapper"
      >
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render toolbar slot correctly 1`] = `
<div class="r-picker">
  <div class="r-picker__toolbar">
    Custom toolbar
  </div>
  <div class="r-picker__columns"
       style="height: 264px;"
  >
    <div class="r-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="r-picker-column__wrapper"
      >
      </ul>
    </div>
  </div>
</div>
`;
